--- a/.github/workflows/diff_shades_comment.yml
+++ b/.github/workflows/diff_shades_comment.yml
@@ -1,9 +1,8 @@
 name: diff-shades-comment
 
 on:
-  workflow_run:
-    workflows: [diff-shades]
-    types: [completed]
+  workflow_dispatch:
+
 
 permissions:
   pull-requests: write
