--- a/.github/workflows/diff_shades.yml
+++ b/.github/workflows/diff_shades.yml
@@ -1,9 +1,7 @@
 name: diff-shades
 
 on:
-  push:
-    branches: [main]
-    paths: ["src/**", "pyproject.toml", ".github/workflows/*"]
+  workflow_dispatch:
 
   pull_request:
     paths: ["src/**", "pyproject.toml", ".github/workflows/*"]
