--- a/.github/workflows/test-311.yml
+++ b/.github/workflows/test-311.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.11.0-rc - 3.11"]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-13, windows-latest]
 
     steps:
       - uses: actions/checkout@v3
